--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "avaXwap Info",
-  "name": "View statistics for avaXwap exchanges.",
+  "short_name": "Pangolin Info",
+  "name": "View statistics for the Pangolin exchange.",
   "icons": [
     {
       "src": "favicon.png",
