--- a/package.json
+++ b/package.json
@@ -91,8 +91,11 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "coingecko-api": "^1.0.10",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "path": "^0.12.7"
   }
 }
