--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           CI: true
       - run: yarn build
         env:
-          CI: true
+          CI: false
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
