--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,11 @@ jobs:
       - run: yarn build
         env:
           CI: false
-      - run: npm i @cloudflare/wrangler@1.13.0 -g
-      - run: wrangler publish
+      - name: Publish
+        uses: cloudflare/wrangler-action@1.3.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
         env:
-          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+          USER: root
           CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
