--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "@uniswap/token-lists": "^1.0.0-beta.15",
+    "@pangolindex/token-lists": "^1.0.1",
     "ajv": "^6.12.4",
     "animated-number-react": "^0.1.1",
     "apollo-cache-inmemory": "^1.6.3",
