--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://info.pangolin.exchange",
   "devDependencies": {
     "@babel/preset-env": "7.8.7",
+    "@pangolindex/token-lists": "^1.0.1",
     "@popperjs/core": "^2.4.2",
     "@reach/portal": "^0.10.3",
     "@reach/router": "^1.2.1",
@@ -14,7 +15,6 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "@pangolindex/token-lists": "^1.0.1",
     "ajv": "^6.12.4",
     "animated-number-react": "^0.1.1",
     "apollo-cache-inmemory": "^1.6.3",
@@ -92,9 +92,11 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "coingecko-api": "^1.0.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "moment": "^2.29.1",
     "path": "^0.12.7"
   }
 }
