--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "cp -r ./node_modules/@pangolindex/tradingview-chart/ ./public/"
+    "postinstall": "copyfiles ./node_modules/@pangolindex/tradingview-chart/** ./public/tradingview-chart -u 3 && copyfiles ./node_modules/@pangolindex/tradingview-chart/**/** ./public/tradingview-chart -u 3"
   },
   "browserslist": {
     "production": [
@@ -95,6 +95,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "coingecko-api": "^1.0.10",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
