--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://info.pangolin.exchange",
   "devDependencies": {
     "@babel/preset-env": "7.8.7",
+    "@pangolindex/token-lists": "^1.0.1",
     "@popperjs/core": "^2.4.2",
     "@reach/portal": "^0.10.3",
     "@reach/router": "^1.2.1",
@@ -14,7 +15,6 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "@pangolindex/token-lists": "^1.0.1",
     "ajv": "^6.12.4",
     "animated-number-react": "^0.1.1",
     "apollo-cache-inmemory": "^1.6.3",
@@ -91,6 +91,18 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@pangolindex/sdk": "^1.1.0",
+    "@types/lodash.flatmap": "^4.5.6",
+    "@types/luxon": "^2.0.4",
+    "@types/multicodec": "^2.1.0",
+    "@types/qs": "^6.9.7",
+    "@types/react-html-parser": "^2.0.2",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
+    "@types/rebass": "^4.0.9",
+    "@types/testing-library__cypress": "^5.0.9",
+    "@types/wcag-contrast": "^3.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
