--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@pangolindex/analytics",
   "private": true,
   "homepage": "https://info.pangolin.exchange",
+  "engines": {
+    "node": ">=14.21.1 <=16.18.1"
+  },
   "devDependencies": {
     "@babel/preset-env": "7.8.7",
     "@pangolindex/token-lists": "^1.0.1",
